# Laba-17

./: CMakeLists.txt  README.md  main.c
string/: string_.c  string_.h
string/task/: balance_string.h  change_word_order.h  complement_string.h  counter_palindrome_word.h  find_anagram_words.h  find_duplicate_words.h  find_last_common_word.h  find_preceding-word.h  get_word_except_last.h  letters_belong_string.h  lexicographical_order.h  print_revers_ordered.h  print_word_before_first_word_with_a.h  rearranging_words.h  remove_adjacent_equal_letters.h  remove_non_letters.h  remove_palindrome_word.h  replace_digit_to_space.h  replace_word_to_word.h  reverse_word.h
